--- a/spring-ai-alibaba-rag-example-bestpractice/rag-elasticsearch/src/main/resources/application.yml
+++ b/spring-ai-alibaba-rag-example-bestpractice/rag-elasticsearch/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   # spring elasticsearch配置
   elasticsearch:
-    uris: http://localhost:9200
+    uris: http://47.111.178.112:9200
     username: elastic
     password: esadmin123
   ai:
